# G60-News-Network-Visualization

./: LICENSE  README.md  data_visualize.py  pyproject.toml  workflow.py
DataCleaning/: data_cleaning.py  get_frequency.py  stopwords.txt  sum.py  tokenlizing.py  user_dict.txt
EntityExtraction/: EE_article.py  EE_sentence.py
EntityExtraction/EntityDict/: gen_dict.py  hello_qwen.py
EntityExtraction/EntityDict/result/: entity_dict.csv
Network/: gen_net.py
