[project]
name = "proj25-06-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "jieba>=0.42.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyecharts>=2.0.8",
    "pyhanlp>=0.1.89",
    "python-louvain>=0.16",
    "scipy>=1.15.3",
]

[tool.uv.workspace]
members = [
    "test",
]
